# Wizard

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  Wizard  Wizard.h  Wizard.hpp  config.h  config.status  configure  configure.ac  configure~  main.cpp  test  test.cpp  test1.cpp  test2.cpp
.deps/: Wizard-main.Po  main-main.Po  test1-test1.Po  test2-test2.Po
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
